--- a/Homework/HW_Day002.ipynb
+++ b/Homework/HW_Day002.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "id": "9U3itXkFKqV4"
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "id": "kLjyVid_JpIC"
    },
@@ -52,7 +52,7 @@
        "       [ 4,  9, 14, 19, 24, 29]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,13 +60,13 @@
    "source": [
     "#1.將下列清單(list1)，轉成維度為(5X6)的array，順序按列填充。(hint:order=\"F\")\n",
     "array1 = np.array(range(30))\n",
-    "arrray2=array1.reshape((5,6),order=\"F\")\n",
-    "arrray2"
+    "array2=array1.reshape((5,6),order=\"F\")\n",
+    "array2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "id": "X1PZ16iqXWOe"
    },
@@ -74,17 +74,17 @@
     {
      "data": {
       "text/plain": [
-       "(array([ 1,  7, 13, 19, 25], dtype=int64),)"
+       "(array([0, 1, 2, 3, 4], dtype=int64), array([5, 0, 1, 2, 3], dtype=int64))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#2.呈上題的array，找出被6除餘1的數的索引\n",
-    "d=np.where(array1%6==1)\n",
+    "d=np.where(array2%6==1)\n",
     "d"
    ]
   },
