--- a/Homework/HW_Day016.ipynb
+++ b/Homework/HW_Day016.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -244,7 +244,7 @@
        "14          15          89             67             77  girl      3"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {
     "id": "CWxb-2TqfbNK"
    },
@@ -339,16 +339,16 @@
      "output_type": "stream",
      "text": [
       "sex\n",
-      "boy     89\n",
-      "girl    77\n",
-      "Name: chinese_score, dtype: int64\n",
-      "相差: 12 分\n"
+      "boy     55.333333\n",
+      "girl    62.666667\n",
+      "Name: chinese_score, dtype: float64\n",
+      "相差: -7.333333333333329 分\n"
      ]
     }
    ],
    "source": [
     "#3.分析全校女生與男生國文平均差幾分?\n",
-    "chin_avg=score_df.groupby([\"sex\"]).max()\n",
+    "chin_avg=score_df.groupby([\"sex\"]).mean()\n",
     "print(chin_avg.loc[:,\"chinese_score\"])\n",
     "print(\"相差:\",chin_avg.loc[\"boy\",\"chinese_score\"]-chin_avg.loc[\"girl\",\"chinese_score\"],\"分\")"
    ]
