--- a/Homework/HW_Day018.ipynb
+++ b/Homework/HW_Day018.ipynb
@@ -1,16 +1,33 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "1.在速度較慢的時候，可以先從哪邊開始檢查？\n",
-    "\n",
-    "Ans: 檢查讀取資料的格式，將常用的csv轉為pickle檔\n",
-    "     多使用內建函數，ex. agg\n",
-    "    向量化的資料處理，ex.isin"
+    "## 1.在速度較慢的時候，可以先從哪邊開始檢查？"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ans: 檢查讀取資料的格式，將常用的csv轉為pickle檔\n",
+    "###     多使用內建函數，ex. agg\n",
+    "###    向量化的資料處理，ex.isin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.資料過大時應採取什麼方式讓記憶體占用量下降？"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ans: 將int型態改成unit型態"
    ]
   },
   {
@@ -18,11 +35,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "2.資料過大時應採取什麼方式讓記憶體占用量下降？\n",
-    "\n",
-    "Ans: 將int型態改成unit型態"
-   ]
+   "source": []
   }
  ],
  "metadata": {
